# auto_apply_codex

./: .gitignore  README.md  auto_click_config.json  auto_click_gui.py  check_syntax.py  pyproject.toml
.claude/: settings.local.json
