[project]
name = "auto-apply"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dxcam>=0.0.5",
    "mss>=10.1.0",
    "opencv-python>=4.12.0.88",
    "pillow>=11.3.0",
    "pyautogui>=0.9.54",
    "pyinstaller>=6.15.0",
    "pywin32>=311",
]
